--- a/code/2. stock classification.ipynb
+++ b/code/2. stock classification.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from pycon9 import fit_scaler, scale, prepare_classification_samples, binary_conf_matrix, plot_loss, plot_acc\n",
+    "from aiconf import fit_scaler, scale, prepare_classification_samples, binary_conf_matrix, plot_loss, plot_acc\n",
     "\n",
     "WINDOW = 7\n",
     "TEST_SIZE = 0.2\n",
